fix: field description visibility in form fields

--- a/packages/components/src/components/FormField/FormField.module.scss
+++ b/packages/components/src/components/FormField/FormField.module.scss
@@ -19,7 +19,8 @@
 
   /* With field error */
 
-  &:has(.fieldError) {
+  &:has(.fieldError),
+  &:has(.customFieldError) {
     .fieldDescription {
       display: none;
     }
